# parafields-core

./: .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  _formulas.tex  _formulas_dark.tex  a00002.html  a00002_source.html  a00005.html  a00005_source.html  a00008.html  a00008_source.html  a00011.html  a00011_source.html  a00014.html  a00014_source.html  a00017.html  a00017_source.html  a00020.html  a00020_source.html  a00023.html  a00023_source.html  a00026.html  a00026_source.html  a00029.html  a00029_source.html  a00032.html  a00032_source.html  a00035.html  a00035_source.html  a00038.html  a00038_source.html  a00041.html  a00041_source.html  a00044.html  a00044_source.html  a00047.html  a00047_source.html  a00050.html  (+368 more)
.github/workflows/: ci.yml  doxygen-deploy.yml
app/: fieldgenerator.cc
cmake/: parafieldsConfig.cmake.in
html/: a00005_source.html  a00011_source.html  a00017.html  a00017_source.html  a00020.html  a00020_source.html  a00026_source.html  a00029_source.html  a00032.html  a00032_source.html  a00035.html  a00041.html  a00041_source.html  a00044_source.html  a00053_source.html  a00059_source.html  a00063.html  a00876.html  a00879.html  a00884.html  a00888.html  a00899.html  a00907.html  a00908.html  a00912.html  a00919.html  a00920.html  a00923.html  a00927.html  a00928.html  a00931.html  a00932.html  a00936.html  a00939.html  a00940.html  a00944.html  a00947.html  a00948.html  a00952.html  a00955.html  (+92 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_3.js  all_4.js  all_5.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  enums_0.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_6.js  functions_12.js  functions_14.js  functions_15.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  functions_e.js  functions_f.js  namespaces_0.js  searchdata.js  (+9 more)
include/parafields/: covariance.hh  exceptions.hh  fieldtraits.hh  gslfallback.hh  io.hh  legacyvtk.hh  matrix.hh  mutators.hh  optproblem.hh  pngreader.hh  randomfield.hh  stochastic.hh  trend.hh
include/parafields/backends/: cpprngbackend.hh  dctdstfieldbackend.hh  dctmatrixbackend.hh  dftfieldbackend.hh  dftmatrixbackend.hh  fftwwrapper.hh  gslrngbackend.hh  r2cfieldbackend.hh  r2cmatrixbackend.hh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+59 more)
test/: CMakeLists.txt  fieldtest.cc  randomfield1d.ini  randomfield2d.ini  randomfield3d.ini  randomfield4d.ini  tests.cc  traits.hh
